--- a/dosyalar/css/styles.css
+++ b/dosyalar/css/styles.css
@@ -811,7 +811,7 @@ body.dark-theme {
   margin-bottom: 1.5rem;
 }
 
-.music__title-sub {
+.music__title-sub{
   text-align: center;
   width: fit-content;
   margin: 0 auto 2.5rem;
@@ -819,25 +819,9 @@ body.dark-theme {
   letter-spacing: 0.5px;
 }
 
-.music__container {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px; /* İki kutu arasındaki boşluk */
-  flex-wrap: wrap; /* Küçük ekranlarda alt alta gelmelerini sağlar */
-  row-gap: 2rem; /* Orijinal boşluğu koruyoruz */
+.music__container{
+  row-gap: 2rem;
 }
-
-.music__box {
-  flex: 1;
-  max-width: 48%; /* Eşit genişlik */
-}
-
-iframe {
-  width: 100%;
-  height: 410px; /* İki iframe'in de yüksekliğini eşit tutalım */
-  border-radius: 12px; /* Kenarları yuvarlak olacak */
-}
-
 
 .iletisim {
   padding-bottom: 0;
